Closed
Bug 59975
Opened 25 years ago
Closed 24 years ago
general.useragent.override ignored
Categories
(Core :: Networking: HTTP, defect, P3)
Tracking
()
RESOLVED
FIXED
People
(Reporter: thayes0993, Assigned: neeti)
Details
Attachments
(2 files)
4.35 KB,
text/plain
|
Details | |
1.99 KB,
patch
|
Details | Diff | Splinter Review |
The general.useragent.override preference value is supposed to be used in place
of the computed useragent value. However this value is read once when the HTTP
service is created, which may be early in the application initialization,
before a user profile is selected.
In particular, the layout code sets specific attributes of the user agent string
(Necko version number) prior to the user selecting a profile. I've attached a
stack trace showing this. Since the http protocol service does not register
pref callbacks for values that may change when the user profile is read, the
override value has no effect.
Reporter | ||
Comment 1•25 years ago
|
||
Terry,
Where is the preference general.useragent.override defined? I can't seem to find
it.
Thanks,
Neeti
Status: NEW → ASSIGNED
Reporter | ||
Comment 4•25 years ago
|
||
I'm not sure it's *defined* anywhere. The default value is the empty string, or
just "not defined".
It's used in the http protocol handler
/netwerk/protocol/http/src/nsHTTPHandler.cpp, line 625
Comment 6•24 years ago
|
||
r=darin on the patch.
Scott,
Can I get a super review for this patch.
Thanks,
Neeti
Comment 8•24 years ago
|
||
you sure can, sr=mscott
Fix checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•