fix for bug 59975 - general.useragent.override ignored, r=darin@netscape.com,sr=mscott@netscape.com